Agregado segunda parte de formularios

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         <input id="input" type="text" placeholder="Buscar personas: ">
         <ul id="listaPersonas"></ul>
     </div>
-
+    <div class="caja_formulario">
+        <input class="inputs" id="nombre"type="text"placeholder="Ingrese nombre">
+        <input class="inputs" id="correo"type="text"placeholder="Ingrese correo">
+        <input class="inputs" id="contraseña"type="text"placeholder="Ingrese contraseña">
+    </div>
     <script src="jsfile.js"></script>
+    <script src="jsfile2.js"></script>
 </body>
 </html>
